2009-07-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
	always update the folder counts not only if we receive changed
	uids but when we get added uids and removed uids
	(folder_tracking_finalize)
	(_tny_camel_folder_track_folder_changed)
	(tny_camel_folder_finalize): user_data is now priv instead of self
	(folder_tracking_changed): do not do anything if the folder is
	already loaded as the folder_changed signal will handle the changes

2009-07-14  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_get_msg_async_thread): do not check for
	CAMEL_IS_OBJECT as a CamelOperation is not a CamelObject

2009-07-13  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-header-list-model.c 
	(tny_gtk_header_list_model_prepend): don't restart
	the views notify timeout on each message add.

	* libtinymailui-gtk/tny-gtk-header-list-model.c: initial
	views notify timeout run in 1 ms.

2009-07-10  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	on disconnecting from network, avoid any network communication if we're
	in idle loop and we don't have the idle lock. This avoids some crashes
	on starting idle if connection is shutdown.

2009-07-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-header-list-model.c
	(notify_views_add): speed up the first views update.

2009-06-30  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c: remove
	mark_for_removal handling as this is breaking delayed refresh
	mode, and also detecting new folders in some cases.

2009-06-29  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
	reenable poke_status calls in delayed refresh mode.

	* libtinymail-camel/tny-camel-folder.[ch], 
	libtinymail-camel/tny-camel-folder-priv.h