@@ -184,15 +184,17 @@ get_parent_full_name (TnyFolderStore *store, gchar *path_separator)
 	gchar *name = NULL;
 
 	folders = tny_simple_list_new ();
-	current = store;
+	current = g_object_ref (store);
 
 	while (current && !TNY_IS_ACCOUNT (current)) {
+		TnyFolderStore *to_unref;
+		to_unref = current;
 		tny_list_prepend (folders, (GObject *) current);
 		current = tny_folder_get_folder_store (TNY_FOLDER (current));
+		g_object_unref (to_unref);
 	}
 
-	if (current && (current != store))
-		g_object_unref (current);
+	g_object_unref (current);
 
 	iter = tny_list_create_iterator (folders);
 	while (!tny_iterator_is_done (iter)) {
