@@ -1,3 +1,10 @@
+2009-07-20  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymailui-gtk/tny-gtk-folder-list-store.c (get_parent_full_name):
+	there was a reference leak in this method, as the recursion for
+	getting the list of all parents was not properly freeing the
+	objects.
+
 2009-07-16  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
